# wubba

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
example/: example.py
examples/: 01_quickstart.py  02_web_deduplication.py  03_similarity_search.py  04_page_classification.py  05_production_deployment.py  06_embedding_analysis.py  07_custom_training.py  08_batch_processing.py
src/wubba/: __init__.py  config.py  const.py  data.py  inference.py  metrics.py  model.py  train.py  utils.py
wubba/: config.py  const.py  data.py  inference.py  model.py  train.py  utils.py
