[project]
name = "wubba"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet>=2024.11.0",
    "lightning>=2.5.1.post0",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "torch>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
