[project]
name = "wubba"
version = "0.2.0"
description = "Self-supervised representation learning for HTML documents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "suven" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
keywords = [
    "html",
    "embeddings",
    "representation-learning",
    "self-supervised",
    "contrastive-learning",
    "transformer",
    "matryoshka",
    "web-scraping",
    "document-similarity",
]
dependencies = [
    "fastparquet>=2024.11.0",
    "lightning>=2.5.1.post0",
    "lxml>=5.4.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "torch>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/imsuven/wubba"
Repository = "https://github.com/imsuven/wubba"
Documentation = "https://github.com/imsuven/wubba#readme"
Issues = "https://github.com/imsuven/wubba/issues"

[project.optional-dependencies]
onnx = [
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]
examples = [
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
]
all = [
    "wubba[onnx,examples]",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wubba"]

# Ruff configuration
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["wubba"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pyright configuration
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["src"]
# Disable rules that are problematic with PyTorch/Lightning
reportAttributeAccessIssue = false
reportArgumentType = "warning"
reportIncompatibleMethodOverride = false
reportOptionalMemberAccess = "warning"
reportIndexIssue = false
reportCallIssue = "warning"
reportReturnType = "warning"
